--- a/02.2_Categorical_variables.ipynb
+++ b/02.2_Categorical_variables.ipynb
@@ -207,7 +207,7 @@
     "use_cols = ['id', 'purpose', 'loan_status', 'home_ownership']\n",
     "\n",
     "data = pd.read_csv(\n",
-    "    'loan.csv', usecols=use_cols).sample(\n",
+    "    'data/loan.csv', usecols=use_cols).sample(\n",
     "        10000, random_state=44)  # set a seed for reproducibility\n",
     "\n",
     "data.head()"
@@ -544,7 +544,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.1"
   },
   "toc": {
    "nav_menu": {},
