--- a/02.3_Dates.ipynb
+++ b/02.3_Dates.ipynb
@@ -167,7 +167,7 @@
     "\n",
     "use_cols = ['loan_amnt', 'grade', 'purpose', 'issue_d', 'last_pymnt_d']\n",
     "\n",
-    "data = pd.read_csv('loan.csv', usecols=use_cols)\n",
+    "data = pd.read_csv('data/loan.csv', usecols=use_cols)\n",
     "\n",
     "data.head()"
    ]
@@ -379,7 +379,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.1"
   },
   "toc": {
    "nav_menu": {},
